--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ crossbeam-channel = "0.4.2"
 tui = { version = "0.10.0", default-features = false, features = ['crossterm'] }
 crossterm = "0.17.3"
 argh = "0.1.3"
+unicode-segmentation = "1.6.0"
+walkdir = "2.3.1"
+lazy_static = "1.4.0"
+fancy-regex = "0.3.5"
