--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ walkdir = "2.3.1"
 lazy_static = "1.4.0"
 fancy-regex = "0.3.5"
 path-absolutize = "3.0.6"
+thiserror = "1.0.20"
+anyhow = "1.0.32"
