--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,11 @@ crossterm = "0.17.3"
 argh = "0.1.3"
 unicode-segmentation = "1.6.0"
 walkdir = "2.3.1"
-lazy_static = "1.4.0"
 fancy-regex = "0.3.5"
 path-absolutize = "3.0.6"
 thiserror = "1.0.20"
 anyhow = "1.0.32"
+async-std = "1.6.3"
+once_cell = "1.4.1"
+ron = "0.6.2"
+igd = "0.11.1"
